--- a/blogproject/src/main/resources/application.properties
+++ b/blogproject/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/sangblog
+spring.datasource.url=jdbc:mysql://localhost:3306/sangblog
 spring.datasource.username=sang
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
