--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@angular/service-worker": "^13.2.4",
     "@tinymce/tinymce-angular": "^5.0.1",
     "bootstrap": "^5.1.3",
     "ngx-webstorage": "^9.0.0",
