send gmail once user login

--- a/blogproject/src/main/resources/application.properties
+++ b/blogproject/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sangblog
+spring.datasource.url=jdbc:mysql://159.223.54.196:3306/sangblog
 spring.datasource.username=sang
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
